--- a/jproject/templates/user_home.html
+++ b/jproject/templates/user_home.html
@@ -84,7 +84,7 @@
                 <p class="card-text"><b>Type:</b> {{i.job_type}}</p>
                 <p class="card-text"><b>Start Date:</b> {{i.date_posted.date}}</p>
                 <p class="card-text"><b>End Date:</b> {{i.application_deadline.date}}</p>
-                <p class="card-text"><b>Salary Range:</b> {{i.salrange}}</p>
+                <p class="card-text"><b>Salary Range:</b> {{i.salrange}} /anum</p>
                 <p class="card-text"><b>Experience Required:</b> {{i.experience_required}}</p>
                 <a href="{% url 'job_details' i.id %}" class="btn btn-outline-primary mt-2">See Details</a>
               </div>
