--- a/jproject/templates/company/cfooter.html
+++ b/jproject/templates/company/cfooter.html
@@ -14,7 +14,7 @@
         <div class="col-md-4 p-4">
             <h5>Quick Links</h5>
             <hr>
-            <a href="index.html" class="text-decoration-none text-light">Home</a><br>
+            <a href="#" class="text-decoration-none text-light">Home</a><br>
             <a href="#" class="text-decoration-none text-light">About</a><br>
             <a href="#" class="text-decoration-none text-light">Contact</a><br>
         </div>
