--- a/jproject/templates/header.html
+++ b/jproject/templates/header.html
@@ -16,7 +16,7 @@
             <!-- Header section start or 1st row start -->
             <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/">JobPortal</a>
+                    <a class="navbar-brand" href="/">Easy_Jobs</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
