--- a/jproject/templates/user_profile.html
+++ b/jproject/templates/user_profile.html
@@ -55,8 +55,9 @@
     {% for i in data %}
 
     <div class="card card-content bg-gradient-primary"> 
-
+        {% if i.profile_pic %}
         <img src="{{i.profile_pic.url}}" class="card-img-top rounded-circle m-5" style="width: 150px; height: 150px; object-fit: cover;" alt="Profile Picture">
+        {% endif %}
         <div class="card-body">
             <h5 class="card-title">{{i.user.first_name}} {{i.user.last_name}}</h5>
             <p class="card-text">
@@ -126,7 +127,7 @@
                 {% if i.profile_pic %}
                 <p>{{ i.profile_pic.url }}</p>
                 {% endif %}
-                <input type="file" class="form-control" name="profile_pic" id="profile_pic" accept="image/*">
+                <input type="file" class="form-control" name="profile_pic" id="profile_pic" accept="image/*" required>
             </div>
             <div class="mb-3">
                 <label for="resume" class="form-label">Resume:</label>
